# lmdb

./: build.ps1  deploy_msys.ps1  my_rebase.sh
libraries/liblmdb/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  build.ps1  configure.ac  deploy_msys.ps1  liblmdb.pc.in  lmdb.pc.in  make_msys2.sh  mdb.c  mdb_copy.c  mdb_dump.c  mdb_load.c  mdb_stat.c  midl.c  mtest.c  mtest2.c  mtest3.c  mtest4.c  mtest5.c  mtest6.c
libraries/liblmdb/cmake/: README.md  lmdb.pc.in
libraries/liblmdb/gl/: Makefile.am  pthread.h  signal.h  time.h  unistd.h
libraries/liblmdb/gl/m4/: gnulib-cache.m4  gnulib-comp.m4
libraries/liblmdb/gl/sys/: select.h  socket.h
libraries/liblmdb/m4/: lmdb-lib-version.m4
libraries/liblmdb/tests/: .gitignore  mtest1.sh  mtest2.sh  mtest3.sh  mtest4.sh  mtest5.sh
